style.css
* {
  padding: 0;
  margin: 0;
}

.textarea {
  width: 100%;
  height: 50%;
  position: absolute;
}

.keyboard {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  padding: 5px 0;
  background: rgba(153, 204, 255, 0.9);
  height: auto;
}

.keyboard--keys {
  text-align: center;
}

.keyboard--key {
  height: 45px;
  width: 6%;
  max-width: 90px;
  margin: 3px;
  border-radius: 5%;
  font-size: 1rem;
  background: #6699ff;
  color: white;
  cursor: pointer;
  border: 0;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  vertical-align: top;
  padding: 0;
  position: relative;
  /*
        :active {
            background: rgba(102, 153, 255, 0.151); //~
        }
        */
}

.keyboard--key-pushed {
  background-color: #022e81;
  border-radius: 15%;
}

.keyboard--key:hover {
  background-color: #0a5bfc;
}

.keyboard--key:active {
  background-color: #022e81;
  border-radius: 15%;
}

.keyboard--key_wide {
  width: 12%;
}

.keyboard--key_wide_extra {
  width: 36%;
  max-width: 500px;
}

.keyboard--key-activated::after {
  content: '';
  position: absolute;
  top: 10px;
  right: 10px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: rgba(0, 0, 0, 0.4);
}

.keyboard--key-active::after {
  background: rgba(7, 240, 7, 0.4);
}

.keyboard--key_dark {
  background: rgba(0, 0, 0, 0.4);
}

.red {
  background: red;
}
/*# sourceMappingURL=style.css.map */

